<resources>
    <string name="app_name">Capstone - Robert Klare</string>
    <string name="coaching_companion">Coaching Companion:</string>
    <string name="youth_roster_manager">Youth Roster Manager</string>
    <string name="pick_ups">Pick-Ups</string>
    <string name="search">Search</string>
    <string name="select_a_team">Select a Team:</string>
    <string name="add_a_new_team">Add a New Team!</string>
    <string name="add_your_new_team">Add Your New Team:</string>
    <string name="back_to_home">Back To Home</string>
    <string name="save_team_info">Save Team Info</string>
    <string name="team_name">Team Name:</string>
    <string name="age_group">Age Group:</string>
    <string name="enter_your_new_team_name">Enter New Team Name</string>
    <string name="or">OR:</string>
    <string name="delete_team">DELETE TEAM</string>
    <string name="add_player">Add Player</string>
    <string name="rostered_pickup">Rostered/Pickup</string>
    <string name="birthday">BirthDay:</string>
    <string name="position">Position:</string>
    <string name="number">Number:</string>
    <string name="parent">Parent:</string>
    <string name="edit_player">Edit Player</string>
    <string name="done">Done</string>
    <string name="delete_player">Delete Player</string>
    <string name="add_a_new_player">Add A New Player:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="player">Player #:</string>
    <string name="newPosition">Position:</string>
    <string name="player_number">Player Number</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_positions">Enter Positions</string>
    <string name="birthdayAdd">Birthday:</string>
    <string name="add_to_roster">Add to Roster?</string>
    <string name="parent_info">Parent Info:</string>
    <string name="first_name_parent">First Name:</string>
    <string name="last_name_parent">Last Name:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone #:</string>
    <string name="parent_first_name">Parent First Name</string>
    <string name="parent_last_name">Parent Last Name</string>
    <string name="example_email_com">example@email.com</string>
    <string name="_800_555_5555">8005555555</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add!</string>
    <string name="parentname">ParentName</string>
    <string name="edit_player_parent">Edit Player/Parent</string>
    <string name="save">Save!</string>
    <string-array name="Ages">
        <item>8U</item>
        <item>10U</item>
        <item>12U</item>
        <item>14U</item>
        <item>16U</item>
        <item>18U</item>
    </string-array>
    <string-array name="yesNo">
        <item>Yes</item>
        <item>No</item>
    </string-array>

</resources>